Finish Index page
+ Add index page HTML/CSS

--- a/app/assets/stylesheets/fortitude_rails/base.css.scss
+++ b/app/assets/stylesheets/fortitude_rails/base.css.scss
@@ -1,3 +1,5 @@
+@import "fortitude/theme/settings/colors";
+@import "fortitude/theme/settings/defaults";
 @import "fortitude";
 @import "fortitude/theme";
 @import "variables";
