--- a/app/views/fortitude_rails/static/index.html.haml
+++ b/app/views/fortitude_rails/static/index.html.haml
@@ -1,1 +1,71 @@
-%h1 INDEX PAGE
+.box.box--hero.xs-ptb10{style: "background-image: url('#{image_path('fortitude_rails/index/hero.png')}'); background-repeat: no-repeat; background-position: center 8rem; background-attachment: fixed;"}
+  .container.xs-ptb5.xs-prl1.sm-prl0
+    .xs-alpha.xs-inset3.xs-mb2 Why use Fortitude?
+    .xs-gamma.xs-inset2 Designed for products, not prototypes.
+    .xs-gamma.xs-inset2 It's better than Bootstrap™.
+.box.box--info.xs-ptbh0.xs-text-center.xs-delta.xs-mb2
+  Created by Hired
+
+.box
+  .container.xs-prl1.sm-prl0
+    .layout.layout--large
+      .layout__item.sm-6of12.lg-4of12.xs-mb3><
+        %img.xs-block.xs-mrlauto.xs-mb2{src: image_path('fortitude_rails/index/sections/see-all-the-things-all-the-time.png'), alt: 'See all the things, all the time'}
+        %h3.xs-gamma.xs-inseth1.xs-mb1
+          See all the things,
+          %br all the time
+        %p.xs-mb1
+          Fortitude was architected around one simple principle:
+          keep developers out of the css and provide them with a
+          consistent API to compose views, all in markup.
+        %p
+          Semantic zealots:
+          %strong.text-bold you're wrong.
+      .layout__item.sm-6of12.lg-4of12.xs-mb3><
+        %img.xs-block.xs-mrlauto.xs-mb2{src: image_path('fortitude_rails/index/sections/vertical-rhythm.png'), alt: 'Vertical Rhythm'}
+        %h3.xs-gamma.xs-inseth1.xs-mb1
+          Vertical Rhythm
+        %p
+          Good vertical rhythm guides the user's gaze comfortably
+          through your content by ensuring consistent,
+          predictable vertical spacing between all elements.
+          Everything in Fortitude respects a base vertical unit of
+          size, Doing The Math For You™.
+      .layout__item.sm-6of12.lg-4of12.xs-mb3><
+        %img.xs-block.xs-mrlauto.xs-mb2{src: image_path('fortitude_rails/index/sections/bem-naming-conventions.png'), alt: 'BEM Naming Conventions'}
+        %h3.xs-gamma.xs-inseth1.xs-mb1
+          BEM Naming Conventions
+        %p
+          block__element--modifier syntax keeps you out of the
+          documentation and in the markup. Fortitude classes
+          follow consistent conventions. You'll be amazed at how
+          often you 'guess right' at the class you need. For more,
+          check out this article MindBEMding – getting your head
+          ’round BEM syntax by Harry Roberts.
+      .layout__item.sm-6of12.lg-4of12.xs-mb3><
+        %img.xs-block.xs-mrlauto.xs-mb2{src: image_path('fortitude_rails/index/sections/dont-fight-the-cascade.png'), alt: 'Don\'t fight the cascade'}
+        %h3.xs-gamma.xs-inseth1.xs-mb1
+          Don't fight the cascade
+        %p
+          Fortitude classes apply the styles you want without a
+          ridiculous incomprehensible tree of 'inheritance'. When
+          you need new functionality, extending Fortitude is a
+          breeze, and you won't spend time playing wack-a-mole
+          in your CSS if you follow the fortitude conventions
+          outlined here.
+      .layout__item.sm-6of12.lg-4of12.xs-mb3><
+        %img.xs-block.xs-mrlauto.xs-mb2{src: image_path('fortitude_rails/index/sections/build-however-you-want.png'), alt: 'Build however you want'}
+        %h3.xs-gamma.xs-inseth1.xs-mb1
+          Build however you want
+        %p
+          :escaped
+            Unlike <mocking>soooome</mocking> frameworks, Fortitude doesn't get into your way. You think in visual styles instead of abstract component names, and we don't dump an entire visual codebase into your project. It's up to you to establish a visual theme with a designer or a tool like Adobe Kuler.
+      .layout__item.sm-6of12.lg-4of12.xs-mb3><
+        %img.xs-block.xs-mrlauto.xs-mb2{src: image_path('fortitude_rails/index/sections/for-css-wizards-only.png'), alt: 'For CSS Wizards only'}
+        %h3.xs-gamma.xs-inseth1.xs-mb1
+          For CSS Wizards only
+        %p.xs-mb1
+          Lol, jk, everyone can totes use it.
+        %p
+          Semantic zealots:
+          %strong.text-bold you're wrong.
