Cleanup view code for docs

--- a/app/views/fortitude_rails/application/_header.html.haml
+++ b/app/views/fortitude_rails/application/_header.html.haml
@@ -1,5 +1,5 @@
 %header.container--fixed-top.fluid-container
-  %nav.navigationbar.navigationbar--gray-lightest
+  %nav.navigationbar.navigationbar--default
     .container
       .navigationbar__header
         %a.navigationbar__header__logo{href: root_path, target: '_self'} Fortitude Rails
