--- a/app/views/fortitude_rails/components/_box.html.haml
+++ b/app/views/fortitude_rails/components/_box.html.haml
@@ -1,10 +1,11 @@
-.layout__item><
-  %h2.text-black-light.xs-beta.xs-inset2.xs-mb0h Boxes
-  %p Boxes are used for sectioning off content, and also for establishing background colors, borders, and generally making a section stand out from its parent elements.
-  %pre
-    %code.scss
-      :preserve
-        .box                            // A section
-        .box.box--white-light           // White background and appropriate colored borders,
-        .box.box--black.box--rounded    // Black background, rounded borders
-  %h3 TODO: add colored box examples
+.layout
+  .layout__item><
+    %h2.text-black-light.xs-beta.xs-inset2.xs-mb0h Boxes
+    %p Boxes are used for sectioning off content, and also for establishing background colors, borders, and generally making a section stand out from its parent elements.
+    %pre
+      %code.scss
+        :preserve
+          .box                            // A section
+          .box.box--white-light           // White background and appropriate colored borders,
+          .box.box--black.box--rounded    // Black background, rounded borders
+    %h3 TODO: add colored box examples
