--- a/app/views/fortitude_rails/components/_container.html.haml
+++ b/app/views/fortitude_rails/components/_container.html.haml
@@ -1,10 +1,11 @@
-.layout__item><
-  %h2.text-black-light.xs-beta.xs-inset2
-    Containers
-  %hr.text-gray-light
-  %p.xs-ptb1 Containers make it easy to center all of the content or have it expand fluidly
-  %pre
-    %code.scss
-      :preserve
-        .container        // centers this block and sets a sensible responsive width
-        .fluid-container  // div will expand to full screen
+.layout
+  .layout__item><
+    %h2.text-black-light.xs-beta.xs-inset2
+      Containers
+    %hr.text-gray-light
+    %p.xs-ptb1 Containers make it easy to center all of the content or have it expand fluidly
+    %pre
+      %code.scss
+        :preserve
+          .container        // centers this block and sets a sensible responsive width
+          .fluid-container  // div will expand to full screen
