--- a/app/views/layouts/fortitude_rails/application.haml
+++ b/app/views/layouts/fortitude_rails/application.haml
@@ -6,7 +6,7 @@
     %title Fortitude Docs
     %meta{content: 'width=device-width', name: 'viewport'}
     %link{rel: 'icon', type: 'image/x-icon', href: '/favicon.ico'}
-    = stylesheet_link_tag 'fortitude_rails/application', media: 'all'
+    = stylesheet_link_tag 'fortitude_rails/base', media: 'all'
     %link{href: 'http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400|Rajdhani', rel: 'stylesheet', type: 'text/css'}
     %script{src: 'https://code.jquery.com/jquery-2.1.1.min.js'}
     = javascript_include_tag 'fortitude_rails/application'
