--- a/app/views/fortitude_rails/static/getting_started.html.haml
+++ b/app/views/fortitude_rails/static/getting_started.html.haml
@@ -1,5 +1,43 @@
 %ol
-  %li gem install
-  %li import scss files using this pattern: (explain settings first and shit)
-  %li using base theme (references docs and a quick page example maybe)
-  %li customizing (references customization section with custom component example)
+  %li.xs-delta.xs-mb2
+    .xs-mb1
+      Add this to your Gemfile
+
+    %code.bash.hljs.xs-mb1 gem 'fortitude_rails'
+
+    .xs-mb1
+      Then run
+
+    %code.bash.hljs.xs-mb1 gem install
+
+  %li.xs-delta.xs-mb2
+    .xs-mb1
+      Add this to your scss:
+    
+    %pre.xs-mb1
+      %code.scss.hljs
+        :preserve
+          @include "fortitude/fortitude"
+          @include "fortitude/theme"
+    
+    .xs-mb1
+      Or, if using Sprockets instead of scss
+    
+    %pre.xs-mb1
+      %code.css.hljs
+        :preserve
+          *= require fortitude/fortitude
+          *= require fortitude/theme
+
+    .xs-mb1
+      And add this to your application.js
+    %code.js.hljs.xs-mb1
+      \// require fortitude/fortitude
+  
+  %li.xs-delta.xs-mb2
+    When you are ready to start customizing your theme, check out 
+    = link_to 'the customization page', static_path('customization')
+  
+  %li.xs-delta.xs-mb2
+    To start generating components specific to your site, use the
+    = link_to 'component generator', static_path('component_generator')
