De-fuckulate my last PR, move view render spec back to controllers, move config to module, add asset initializer

--- a/app/views/fortitude_rails/static/getting_started.html.haml
+++ b/app/views/fortitude_rails/static/getting_started.html.haml
@@ -33,6 +33,11 @@
       And add this to your application.js
     %code.js.hljs.xs-mb1
       \// require fortitude/fortitude
+
+    .xs-mb1
+      Add this to your routes.rb to have an automatically generated styleguide for your site.
+    %code.ruby.hljs.xs-mb1
+      mount FortitudeRails::Engine => '/fortitude'
   
   %li.xs-delta.xs-mb2
     When you are ready to start customizing your theme, check out 
