--- a/app/views/fortitude_rails/components/_bare_list.html.haml
+++ b/app/views/fortitude_rails/components/_bare_list.html.haml
@@ -1,5 +1,5 @@
 .layout__item><
-  %h2.text-black-light.xs-beta.xs-mbh0 Block Lists
+  %h2.text-black-light.xs-beta.xs-mbh0 Bare Lists
   %hr.text-gray-light.xs-pth0.xs-mb1
 .layout__item.xs-mb2><
   %p.xs-mbh0 Bare Lists are simply lists with default styling removed - no automatic margin or padding, no bullets.
