--- a/app/views/fortitude_rails/components/_box.html.haml
+++ b/app/views/fortitude_rails/components/_box.html.haml
@@ -1,11 +1,13 @@
-.layout
-  .layout__item><
-    %h2.text-black-light.xs-beta.xs-inset2.xs-mb0h Boxes
-    %p Boxes are used for sectioning off content, and also for establishing background colors, borders, and generally making a section stand out from its parent elements.
-    %pre
-      %code.scss
-        :preserve
-          .box                            // A section
-          .box.box--white-light           // White background and appropriate colored borders,
-          .box.box--black.box--rounded    // Black background, rounded borders
-    %h3 TODO: add colored box examples
+.layout__item><
+  %h2.text-black-light.xs-beta.xs-inset2.xs-mbh0 Boxes
+  %p Boxes are used for sectioning off content, and also for establishing background colors, borders, and generally making a section stand out from its parent elements.
+  %pre
+    %code.scss
+      :preserve
+        .box                            // A section
+        .box.box--white-light           // White background and appropriate colored borders,
+        .box.box--black.box--rounded    // Black background, rounded borders
+  %h3 Example
+    - FortitudeRails.theme_intents.each do |intent|
+      .box.xs-m1{class: "box--#{intent}"}
+        %p This is a #{intent} box
