set header title to just 'Fortitude', wrap some pages properly, and bump auto-prefixer

--- a/app/views/fortitude_rails/application/_header.html.haml
+++ b/app/views/fortitude_rails/application/_header.html.haml
@@ -2,7 +2,7 @@
   %nav.navigationbar.navigationbar--default
     .container
       .navigationbar__header
-        %a.navigationbar__header__logo{href: root_path, target: '_self'} Fortitude Rails
+        %a.navigationbar__header__logo{href: root_path, target: '_self'} Fortitude
       .navigationbar__toggle
         %img.icon.icon--burger{alt: 'Menu', src: image_path('spacer.gif')}
         %input.navigationbar__toggle__helper{type: 'checkbox'}
