--- a/app/views/fortitude_rails/static/index.html.haml
+++ b/app/views/fortitude_rails/static/index.html.haml
@@ -4,7 +4,8 @@
     .xs-gamma.xs-inset2 Designed for products, not prototypes.
     .xs-gamma.xs-inset2 It's better than Bootstrap™.
 .box.box--info.xs-ptbh0.xs-text-center.xs-delta.xs-mb2
-  Created by Hired
+  Created by
+  %a{href: 'http://hired.com/?utm_source=fortitudeio', target: '_blank'} Hired
 
 .box
   .container.xs-prl1.sm-prl0
