Set up a place to document the js api

--- a/app/views/fortitude_rails/application/_header.html.haml
+++ b/app/views/fortitude_rails/application/_header.html.haml
@@ -12,6 +12,8 @@
           %li.navigationbar__item
             %a.navigationbar__link{href: static_path('docs'), target: '_self'} Docs
           %li.navigationbar__item
+            %a.navigationbar__link{href: static_path('js_docs'), target: '_self'} JS Docs
+          %li.navigationbar__item
             = link_to 'Full Page', static_path('full_page'), class: 'navigationbar__link'
           %li.navigationbar__item
             %a.navigationbar__link{href: static_path('customization'), target: '_self'} Customization
